--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <body>
     <div class="wrapper">
       <div class="intro" id="introScreen">
+        <img src="pink-origami-vector-clipart.png" class="piggy" />
         <div class="content">
           <p class="title">JS pig dice game - Neural Line</p>
           <h1>
